--- a/BankingApplication/src/main/resources/templates/login.html
+++ b/BankingApplication/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(to right, #000000, #ffd700);
+            background:  #1a1a2e;
             color: #ffffff;
             margin: 0;
             padding: 0;
