--- a/BankingApplication/src/main/resources/templates/register.html
+++ b/BankingApplication/src/main/resources/templates/register.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(to right, #1e3c72, #2a5298);
+            background: #1a1a2e;
             color: #ffffff;
             margin: 0;
             padding: 0;
@@ -18,7 +18,7 @@
         }
 
         .navbar-custom {
-            background-color: rgba(10, 25, 47, 0.9);
+            background-color:  rgba(0, 0, 0, 0.7);
             position: fixed;
             top: 0;
             width: 100%;
@@ -107,7 +107,7 @@
         }
 
         .footer {
-            background-color: rgba(10, 25, 47, 0.9);
+            background-color:  rgba(0, 0, 0, 0.7);;
             color: white;
             padding: 15px 0;
             font-size: 14px;
